--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,18 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
-            <groupId>uk.co.onsdigital.discovery</groupId>
-            <artifactId>dd-model</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <groupId>com.github.ONSdigital</groupId>
+            <artifactId>dp-dd-backend-model</artifactId>
+            <version>develop-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
@@ -61,7 +68,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.9.13.6</version>
+            <version>6.10</version>
             <scope>test</scope>
         </dependency>
         <dependency>
