--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <artifactId>dp-dd-backend-model</artifactId>
             <version>develop-SNAPSHOT</version>
         </dependency>
+<!--
+        <dependency>
+            <groupId>uk.co.onsdigital.discovery</groupId>
+            <artifactId>dd-model</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+-->
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
