--- a/pom.xml
+++ b/pom.xml
@@ -37,18 +37,16 @@
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>com.github.ONSdigital</groupId>
-            <artifactId>dp-dd-backend-model</artifactId>
-            <version>develop-SNAPSHOT</version>
-        </dependency>
-<!--
+        <!--<dependency>-->
+            <!--<groupId>com.github.ONSdigital</groupId>-->
+            <!--<artifactId>dp-dd-backend-model</artifactId>-->
+            <!--<version>develop-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>uk.co.onsdigital.discovery</groupId>
             <artifactId>dd-model</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
--->
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
