--- a/pom.xml
+++ b/pom.xml
@@ -29,24 +29,29 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>jitpack.io</id>-->
+            <!--<url>https://jitpack.io</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
 
     <dependencies>
-        <dependency>
-            <groupId>com.github.ONSdigital</groupId>
-            <artifactId>dp-dd-backend-model</artifactId>
-            <version>develop-SNAPSHOT</version>
-        </dependency>
         <!--<dependency>-->
-            <!--<groupId>uk.co.onsdigital.discovery</groupId>-->
-            <!--<artifactId>dd-model</artifactId>-->
-            <!--<version>1.0.0-SNAPSHOT</version>-->
+            <!--<groupId>com.github.ONSdigital</groupId>-->
+            <!--<artifactId>dp-dd-backend-model</artifactId>-->
+            <!--<version>develop-SNAPSHOT</version>-->
         <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.co.onsdigital.discovery</groupId>
+            <artifactId>dd-model</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
