--- a/pom.xml
+++ b/pom.xml
@@ -42,16 +42,16 @@
             <artifactId>dp-dd-request-filter</artifactId>
             <version>v1.0.1</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.github.ONSdigital</groupId>-->
-            <!--<artifactId>dp-dd-backend-model</artifactId>-->
-            <!--<version>v1.0.27</version>-->
-        <!--</dependency>-->
         <dependency>
-            <groupId>uk.co.onsdigital.discovery</groupId>
-            <artifactId>dd-model</artifactId>
-            <version>1.0.27</version>
+            <groupId>com.github.ONSdigital</groupId>
+            <artifactId>dp-dd-backend-model</artifactId>
+            <version>v1.0.29</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>uk.co.onsdigital.discovery</groupId>-->
+            <!--<artifactId>dd-model</artifactId>-->
+            <!--<version>1.0.29</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
