--- a/pom.xml
+++ b/pom.xml
@@ -42,27 +42,32 @@
             <artifactId>dp-dd-request-filter</artifactId>
             <version>v1.0.1</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.ONSdigital</groupId>
-            <artifactId>dp-dd-backend-model</artifactId>
-            <version>1.0.30</version>
-        </dependency>
         <!--<dependency>-->
-            <!--<groupId>uk.co.onsdigital.discovery</groupId>-->
-            <!--<artifactId>dd-model</artifactId>-->
+            <!--<groupId>com.github.ONSdigital</groupId>-->
+            <!--<artifactId>dp-dd-backend-model</artifactId>-->
             <!--<version>1.0.30</version>-->
         <!--</dependency>-->
+        <dependency>
+            <groupId>uk.co.onsdigital.discovery</groupId>
+            <artifactId>dd-model</artifactId>
+            <version>1.0.34</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.5</version>
         </dependency>
-
         <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
-            <version>2.6.2</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.8.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-c3p0</artifactId>
+            <version>5.2.8.Final</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
